🔧 (test-github-action.yml): add PGFORK_DROP_IF_EXISTS to test workflow
This change ensures that the test workflow for the GitHub Action
correctly handles cases where the target database might already exist,
preventing potential conflicts during testing.

--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -367,6 +367,7 @@ jobs:
             -e "PGFORK_DEST_PASSWORD=testpass123"
             -e "PGFORK_DEST_SSLMODE=disable"
             -e "PGFORK_TARGET_DATABASE=${{ steps.fork-test.outputs.target-database }}"
+            -e "PGFORK_DROP_IF_EXISTS=true"
             -e "PGFORK_OUTPUT_FORMAT=json"
             postgres-db-fork-action:test
             validate
